crates/adoc-cli/tests/snapshots/snapshots_cli__check_unknown_kind_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
unknown_kind.adoc:5:3: error[schema.unknown_kind] unknown typed-block kind `fact`
  object_id: billing.policy
  help: supported kinds: claim, decision, glossary, warning, constraint, policy, procedure, example, agent_instruction, contradiction, source, api, observation, question. Custom schemas are deferred.
1 errors, 0 warnings
---stderr---
