crates/adoc-cli/tests/snapshots/snapshots_cli__check_warning_missing_body_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
warning_missing_body.adoc:3:1: error[schema.missing_field] warning is missing required body
1 errors, 0 warnings
---stderr---
