crates/adoc-cli/tests/snapshots/snapshots_cli__check_warning_missing_severity_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
warning_missing_severity.adoc:3:1: error[schema.missing_field] warning is missing required field `severity`
  object_id: auth.session.clock-skew
  help: Warnings require non-empty `severity`. Valid warning severities are: low, medium, high, critical.
1 errors, 0 warnings
---stderr---
