crates/adoc-cli/tests/snapshots/snapshots_cli__check_warning_severity_casing_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
warning_severity_casing.adoc:3:1: error[schema.invalid_status] warning `auth.session.clock-skew` has invalid severity `Critical`
  object_id: auth.session.clock-skew
  help: Valid warning severities are: low, medium, high, critical.
1 errors, 0 warnings
---stderr---
